[package]
name = "allfeat-runtime"
version = "1.0.0-dev"
description = "The runtime of the Allfeat chain"
authors = ["Allfeat<https://allfeat.com/>"]
homepage = "https://allfeat.com/"
edition = "2021"
license = "Unlicense"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.0.1", default-features = false, features = [
  "derive",
] }
static_assertions = "1.1.0"
log = { version = "0.4.17", default-features = false }

frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27", optional = true }
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-block-builder = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-authority-discovery = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-consensus-babe = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
allfeat-primitives = { version = "1.0.0", default-features = false, path = "../primitives" }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-io = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-sandbox = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

# Allfeat pallets
pallet-artists = { version = "1.0.0-dev", default-features = false, git = "ssh://git@github.com/Allfeat/pallet-artists.git", branch = "master" }
pallet-music-styles = { version = "0.1.0-dev", default-features = false, git = "ssh://git@github.com/Allfeat/pallet-music-styles.git", branch = "master" }
pallet-artist-identity = { version = "0.1.0-dev", default-features = false, git = "ssh://git@github.com/Allfeat/pallet-artist-identity.git", branch = "master" }
pallet-allfeat-uniques = { version = "0.1.0-dev", default-features = false, git = "ssh://git@github.com/Allfeat/pallet-allfeat-uniques.git", branch = "master" }
pallet-allfeat-assets = { version = "0.1.0-dev", default-features = false, git = "ssh://git@github.com/Allfeat/pallet-allfeat-assets.git", branch = "master" }
pallet-artists-nft = { version = "0.1.0-dev", default-features = false, git = "ssh://git@github.com/Allfeat/pallet-artists-nft.git", branch = "master" }
pallet-artists-tokens = { version = "0.1.0-dev", default-features = false, git = "ssh://git@github.com/Allfeat/pallet-artists-tokens.git", branch = "master" }

pallet-babe = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-authority-discovery = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-bags-list = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-bounties = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-child-bounties = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-collective = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-contracts = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-contracts-primitives = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-contracts-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-conviction-voting = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-democracy = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-election-provider-multi-phase = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-election-provider-support-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-elections-phragmen = { version = "5.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-indices = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-identity = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-lottery = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-membership = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-mmr = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-multisig = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-nomination-pools = { version = "1.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-nomination-pools-benchmarking = { version = "1.0.0", optional = true, default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-offences = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-offences-benchmarking = { version = "4.0.0-dev", optional = true, default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-preimage = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-proxy = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-recovery = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-referenda = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-session-benchmarking = { version = "4.0.0-dev", optional = true, default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-staking-reward-curve = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-state-trie-migration = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-scheduler = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-society = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-tips = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-treasury = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-transaction-storage = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-whitelist = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-utility = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }


# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

# Used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27", optional = true }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27", optional = true }
hex-literal = { version = "0.3.4", optional = true }

# Local Dependencies

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

[features]
default = ["std"]
with-tracing = ["frame-executive/with-tracing"]
std = [
  "sp-authority-discovery/std",
  "pallet-artist-identity/std",
  "pallet-music-styles/std",
  "pallet-allfeat-assets/std",
  "pallet-artists/std",
  "pallet-authority-discovery/std",
  "pallet-authorship/std",
  "sp-consensus-babe/std",
  "pallet-babe/std",
  "pallet-bags-list/std",
  "pallet-balances/std",
  "pallet-bounties/std",
  "sp-block-builder/std",
  "codec/std",
  "scale-info/std",
  "pallet-collective/std",
  "pallet-contracts/std",
  "pallet-contracts-primitives/std",
  "pallet-contracts-rpc-runtime-api/std",
  "pallet-conviction-voting/std",
  "pallet-democracy/std",
  "pallet-elections-phragmen/std",
  "frame-executive/std",
  "pallet-grandpa/std",
  "pallet-im-online/std",
  "pallet-indices/std",
  "sp-inherents/std",
  "pallet-lottery/std",
  "pallet-membership/std",
  "pallet-mmr/std",
  "pallet-multisig/std",
  "pallet-nomination-pools/std",
  "pallet-identity/std",
  "pallet-scheduler/std",
  "allfeat-primitives/std",
  "sp-offchain/std",
  "pallet-offences/std",
  "pallet-preimage/std",
  "pallet-proxy/std",
  "sp-core/std",
  "pallet-randomness-collective-flip/std",
  "sp-std/std",
  "pallet-session/std",
  "sp-api/std",
  "sp-runtime/std",
  "sp-staking/std",
  "pallet-staking/std",
  "pallet-state-trie-migration/std",
  "sp-session/std",
  "pallet-sudo/std",
  "frame-support/std",
  "frame-benchmarking/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "pallet-election-provider-multi-phase/std",
  "pallet-timestamp/std",
  "pallet-tips/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "pallet-transaction-storage/std",
  "pallet-treasury/std",
  "sp-transaction-pool/std",
  "pallet-utility/std",
  "sp-version/std",
  "pallet-society/std",
  "pallet-referenda/std",
  "pallet-recovery/std",
	"pallet-allfeat-uniques/std",
	"pallet-artists-nft/std",
	"pallet-artists-tokens/std",
  "log/std",
  "frame-try-runtime/std",
  "sp-io/std",
  "pallet-child-bounties/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "pallet-allfeat-assets/runtime-benchmarks",
  "pallet-babe/runtime-benchmarks",
  "pallet-bags-list/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-bounties/runtime-benchmarks",
  "pallet-child-bounties/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "pallet-contracts/runtime-benchmarks",
  "pallet-conviction-voting/runtime-benchmarks",
  "pallet-democracy/runtime-benchmarks",
  "pallet-election-provider-multi-phase/runtime-benchmarks",
  "pallet-election-provider-support-benchmarking/runtime-benchmarks",
  "pallet-elections-phragmen/runtime-benchmarks",
  "pallet-grandpa/runtime-benchmarks",
  "pallet-identity/runtime-benchmarks",
  "pallet-im-online/runtime-benchmarks",
  "pallet-indices/runtime-benchmarks",
  "pallet-lottery/runtime-benchmarks",
  "pallet-membership/runtime-benchmarks",
  "pallet-mmr/runtime-benchmarks",
  "pallet-multisig/runtime-benchmarks",
  "pallet-nomination-pools-benchmarking",
  "pallet-offences-benchmarking",
  "pallet-preimage/runtime-benchmarks",
  "pallet-proxy/runtime-benchmarks",
  "pallet-scheduler/runtime-benchmarks",
  "pallet-referenda/runtime-benchmarks",
  "pallet-recovery/runtime-benchmarks",
  "pallet-session-benchmarking",
  "pallet-society/runtime-benchmarks",
  "pallet-staking/runtime-benchmarks",
  "pallet-state-trie-migration/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "pallet-tips/runtime-benchmarks",
  "pallet-transaction-storage/runtime-benchmarks",
  "pallet-treasury/runtime-benchmarks",
  "pallet-utility/runtime-benchmarks",
	"pallet-allfeat-uniques/runtime-benchmarks",
	"pallet-artists-nft/runtime-benchmarks",
	"pallet-artists-tokens/runtime-benchmarks",
	"pallet-music-styles/runtime-benchmarks",
	"pallet-artist-identity/runtime-benchmarks",
  "pallet-whitelist/runtime-benchmarks",
  "pallet-artists/runtime-benchmarks",
  "frame-system-benchmarking",
  "hex-literal",
]
try-runtime = [
  "frame-executive/try-runtime",
  "frame-try-runtime",
  "frame-system/try-runtime",
  "pallet-allfeat-assets/try-runtime",
  "pallet-authority-discovery/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-babe/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-bounties/try-runtime",
  "pallet-child-bounties/try-runtime",
  "pallet-collective/try-runtime",
  "pallet-contracts/try-runtime",
  "pallet-conviction-voting/try-runtime",
  "pallet-democracy/try-runtime",
  "pallet-election-provider-multi-phase/try-runtime",
  "pallet-elections-phragmen/try-runtime",
  "pallet-grandpa/try-runtime",
  "pallet-identity/try-runtime",
  "pallet-im-online/try-runtime",
  "pallet-indices/try-runtime",
  "pallet-lottery/try-runtime",
  "pallet-membership/try-runtime",
  "pallet-mmr/try-runtime",
  "pallet-multisig/try-runtime",
  "pallet-offences/try-runtime",
  "pallet-preimage/try-runtime",
  "pallet-proxy/try-runtime",
  "pallet-randomness-collective-flip/try-runtime",
  "pallet-recovery/try-runtime",
  "pallet-referenda/try-runtime",
  "pallet-scheduler/try-runtime",
  "pallet-session/try-runtime",
  "pallet-society/try-runtime",
  "pallet-staking/try-runtime",
  "pallet-state-trie-migration/try-runtime",
  "pallet-sudo/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-tips/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "pallet-treasury/try-runtime",
  "pallet-utility/try-runtime",
	"pallet-artists/try-runtime",
	"pallet-allfeat-uniques/try-runtime",
	"pallet-artists-nft/try-runtime",
	"pallet-artists-tokens/try-runtime",
  "pallet-whitelist/try-runtime",
]
# Make contract callable functions marked as __unstable__ available. Do not enable
# on live chains as those are subject to change.
contracts-unstable-interface = ["pallet-contracts/unstable-interface"]
# Force `sp-sandbox` to call into the host resident executor. One still need to make sure
# that `sc-executor` gets the `wasmer-sandbox` feature which happens automatically when
# specified on the command line.
# Don't use that on a production chain.
wasmer-sandbox = ["sp-sandbox/wasmer-sandbox"]
