[package]
name = "allfeat-support"
version = "1.0.0-dev"
authors.workspace = true
edition.workspace = true
license = "GPL-3"
homepage.workspace = true
repository.workspace = true
description = "Support code for the Allfeat Substrate chain."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
genres-registry = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"genres-registry/std",
	"frame-support/std",
]
runtime-benchmarks = []
try-runtime = []
