[package]
name = "midds-artist"
version = "1.0.0-dev"
description = "MIDDS representating a Performing Artist actor"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
enumflags2 = { workspace = true }
derive-getters = "0.3.0"

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }

allfeat-support = { workspace = true }
genres-registry = { version = "1.0.0-dev", default-features = false, git = "https://github.com/Allfeat/genres-registry.git", branch = "stable2407", features = ["substrate"] }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-std/std",
    "sp-runtime/std",
    "log/std",
    "genres-registry/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "allfeat-support/std",
    "enumflags2/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime", "frame-system/try-runtime", "sp-runtime/try-runtime" ]