[package]
name = "midds-benchmarker"
version = "1.0.0-dev"
description = "Benchmark and print multiple informations for MIDDS."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }

# SCALE
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# Allfeat
midds = { workspace = true, features = ["runtime-benchmarks"] }
melodie-runtime = { workspace = true, features = ["runtime-benchmarks"] }
shared-runtime = { workspace = true }
