[package]
name = "midds-stakeholder"
version = "1.0.0-dev"
description = "MIDDS representating a Musical Work Stakeholer entity"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }
enumflags2 = { workspace = true }

# Substrate
polkadot-sdk = { workspace = true, features = ["experimental", "runtime"] }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

allfeat-support = { workspace = true }

[features]
default = ["std"]
std = [
	"polkadot-sdk/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"allfeat-support/std",
	"enumflags2/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"allfeat-support/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]
