[package]
name = "pallet-artists"
version = "1.0.0-dev"
authors = ["Allfeat <hello@allfeat.com>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://allfeat.com"
description = "FRAME artists management pallet for the Allfeat chain"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/SailorSnoW/substrate.git", branch = "allfeat" }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/SailorSnoW/substrate.git", branch = "allfeat" }
# Needed for type-safe access to storage DB.
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/SailorSnoW/substrate.git", branch = "allfeat" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/SailorSnoW/substrate.git", branch = "allfeat" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/SailorSnoW/substrate.git", branch = "allfeat", optional = true }

[dev-dependencies]
sp-core = { version = "6.0.0", git = "https://github.com/SailorSnoW/substrate.git", branch = "allfeat" }
sp-std = { version = "4.0.0", git = "https://github.com/SailorSnoW/substrate.git", branch = "allfeat" }
sp-io = { version = "6.0.0", git = "https://github.com/SailorSnoW/substrate.git", branch = "allfeat" }
pallet-assets = { version = "4.0.0-dev", default-features = false, path = "../assets" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/SailorSnoW/substrate.git", branch = "allfeat" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std",
	"pallet-assets/std",
	"pallet-balances/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
